Fixed spacing with player page

--- a/src/app/player/[cardId]/page.module.css
+++ b/src/app/player/[cardId]/page.module.css
@@ -1,6 +1,6 @@
 .playerPageContainer {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 45px auto 0;
     padding: 20px;
     position: relative;
     font-family: 'Inter', sans-serif;
